fix margin and padding on collapse and add mixins to title

--- a/_src/assets/scss/pages/_createCard.scss
+++ b/_src/assets/scss/pages/_createCard.scss
@@ -23,6 +23,7 @@
 .fieldset__legend {
   height: 0;
   overflow: hidden;
+  display: inline-block;
 }
 
 .form__fieldset {
